--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -189,6 +189,16 @@
             </intent-filter>
         </receiver>
 
+
+
+        <receiver android:name="product.clicklabs.jugnoo.driver.PathUploadReceiver" >
+            <intent-filter>
+                <action android:name="product.clicklabs.jugnoo.driver.UPOLOAD_PATH" />
+            </intent-filter>
+        </receiver>
+
+
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
