--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="product.clicklabs.jugnoo.driver"
-    android:versionCode="189"
-    android:versionName="1.8.9_gps_beta_1" >
+    android:versionCode="193"
+    android:versionName="1.9.3_gps_beta" >
 
     <uses-sdk
         android:minSdkVersion="14"
