--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -153,6 +153,12 @@
             android:screenOrientation="portrait" >
         </activity>
 
+        <activity
+            android:name="product.clicklabs.jugnoo.driver.DriverProfileActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+
 
         <service
             android:name="product.clicklabs.jugnoo.driver.DriverLocationUpdateService"
