feature_action_button_in_notification: Add buttons to notification

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -69,7 +69,9 @@
         <activity
             android:name="product.clicklabs.jugnoo.driver.HomeActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"
+            >
         </activity>
         <activity
             android:name="product.clicklabs.jugnoo.driver.RegisterScreen"
