--- a/JugnooNewDriver/AndroidManifest.xml
+++ b/JugnooNewDriver/AndroidManifest.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="product.clicklabs.jugnoo.driver"
-<<<<<<< HEAD
-    android:versionCode="154"
-    android:versionName="1.5.4" >
-=======
-    android:versionCode="156"
-    android:versionName="1.5.6" >
->>>>>>> customer_new_ui1.1
+    android:versionCode="217"
+    android:versionName="2.1.7" >
 
     
     <uses-sdk
@@ -167,7 +163,7 @@
         </activity>
         
             <activity
-            android:name="product.clicklabs.jugnoo.driver.ShareActivity"
+            android:name="product.clicklabs.jugnoo.driver.ShareActivity1"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
