--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -104,7 +104,7 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="product.clicklabs.jugnoo.driver.ShareActivity"
+            android:name=".ShareActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
