--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="product.clicklabs.jugnoo.driver"
-    android:versionCode="218"
-    android:versionName="2.1.8" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="product.clicklabs.jugnoo.driver"
+          android:versionCode="218"
+          android:versionName="2.1.8">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -50,6 +51,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/jugnoo_icon"
+        tools:replace="android:icon"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme" >
@@ -178,6 +180,12 @@
 
         <activity
             android:name="product.clicklabs.jugnoo.driver.PhoneEditOTPConfirmScreen"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+
+        <activity
+            android:name=".DriverDocumentActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
