--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
-
+    <uses-permission android:name="android.permission.CAMERA" />
 
 
     <permission
@@ -184,12 +184,6 @@
             android:screenOrientation="portrait" >
         </activity>
 
-        <activity
-            android:name=".DriverDocumentActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
-        </activity>
-
 
         <service
             android:name="product.clicklabs.jugnoo.driver.DriverLocationUpdateService"
@@ -269,6 +263,12 @@
 
         <activity
             android:name="product.clicklabs.jugnoo.driver.BlankActivityForDialog"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+
+        <activity
+            android:name="product.clicklabs.jugnoo.driver.DriverDocumentActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" >
         </activity>
