--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -182,12 +182,23 @@
             android:screenOrientation="portrait" >
         </activity>
 
+        <activity
+            android:name="product.clicklabs.jugnoo.driver.services.DownloadActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
 
         <service
             android:name="product.clicklabs.jugnoo.driver.DriverLocationUpdateService"
             android:enabled="true"
             android:exported="true"
             android:process=":DriverLocationUpdateService" >
+        </service>
+
+        <service
+            android:name="product.clicklabs.jugnoo.driver.services.DownloadService"
+            android:enabled="true"
+            android:exported="true" >
         </service>
 
 
