--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -117,6 +117,11 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name="product.clicklabs.jugnoo.driver.NotificationCenterActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="product.clicklabs.jugnoo.driver.AddCustomerCashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
