feature_driver_availability_timeout: variables from api added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -209,6 +209,12 @@
             android:exported="true">
         </service>
 
+        <service
+            android:name="product.clicklabs.jugnoo.driver.DriverTimeoutIntentService"
+            android:enabled="true"
+            >
+        </service>
+
 
         <service
             android:name="product.clicklabs.jugnoo.driver.PushPendingCallsService"
