feature_login_using_phone_no: login using otp logic created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -203,6 +203,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name="product.clicklabs.jugnoo.driver.LoginViaOTP"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+        </activity>
 
         <activity
             android:name="product.clicklabs.jugnoo.driver.services.DownloadActivity"
