--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
 
     <permission
@@ -274,6 +275,11 @@
             >
         </service>
 
+        <service
+            android:name="product.clicklabs.jugnoo.driver.ContactsUploadService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
 
         <service
             android:name="product.clicklabs.jugnoo.driver.PushPendingCallsService"
