--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.CLEAR_APP_CACHE"/>
@@ -293,6 +292,11 @@
             android:enabled="true"
             android:exported="true">
         </service>
+
+        <service
+            android:name=".services.SyncMessageService"
+            android:enabled="true"/>
+
 
         <receiver android:name="product.clicklabs.jugnoo.driver.LocationReceiverDriver"/>
         <receiver android:name="product.clicklabs.jugnoo.driver.GPSLocationReceiverBackground"/>
