--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -172,10 +172,10 @@
             android:name=".EditDriverProfile"
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
-        <activity
-            android:name=".PhoneEditOTPConfirmScreen"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+        <!--<activity-->
+            <!--android:name=".PhoneEditOTPConfirmScreen"-->
+            <!--android:label="@string/app_name"-->
+            <!--android:screenOrientation="portrait"></activity>-->
         <activity
             android:name=".LoginViaOTP"
             android:label="@string/app_name"
@@ -318,12 +318,7 @@
         <activity
             android:name=".BlankActivityForDialog"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
-
-        <activity
-            android:name="product.clicklabs.jugnoo.driver.DriverDocumentActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
         </activity>
 
         <activity
@@ -362,11 +357,11 @@
             android:theme="@android:style/Theme.NoDisplay">
         </activity>
 
-        <service
-            android:name=".pubnub.PubnubService"
-            android:enabled="true"
-            android:exported="true">
-        </service>
+        <!--<service-->
+            <!--android:name=".pubnub.PubnubService"-->
+            <!--android:enabled="true"-->
+            <!--android:exported="true">-->
+        <!--</service>-->
 
     </application>
 
