feature_fetch_m_file: service to fetch m file created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -253,6 +253,10 @@
             android:enabled="true"
             android:exported="true"></service>
         <service
+            android:name=".services.FetchMFileService"
+            android:enabled="true"
+            android:exported="true"></service>
+        <service
             android:name=".MeteringService"
             android:enabled="true"
             android:exported="true"></service>
