--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -176,6 +176,14 @@
             android:name=".EditDriverProfile"
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".oldRegistration.OldRegisterScreen"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".oldRegistration.OldOTPConfirmScreen"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
         <!--<activity-->
         <!--android:name=".PhoneEditOTPConfirmScreen"-->
         <!--android:label="@string/app_name"-->
