--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -221,7 +221,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
         <activity
-            android:name=".SelfAuditActivity"
+            android:name=".selfAudit.SelfAuditActivity"
             android:label="@string/app_name"
             android:largeHeap="true"
             android:theme="@style/AppTheme"
