--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -350,6 +350,47 @@
             </intent-filter>
         </receiver>
 
+
+        <!-- Pushy Declarations -->  
+        <!-- Pushy Notification Receiver --> 
+        <!-- Incoming pushes will be redirected to the following BroadcastReceiver class -->
+         
+        <receiver android:name=".PushReceiver"> 
+            <intent-filter> 
+                <!-- Do not modify this --> 
+                <action android:name="pushy.me"/> 
+            </intent-filter>
+             
+        </receiver>
+          
+        <!-- Pushy Update Receiver -->
+
+         <!-- Do not modify - internal BroadcastReceiver that restarts the listener service --> 
+        <receiver android:name="me.pushy.sdk.receivers.PushyUpdateReceiver"> 
+            <intent-filter> 
+                <action android:name="android.intent.action.PACKAGE_REPLACED"/> 
+                <data android:scheme="package"/> 
+            </intent-filter>
+             
+        </receiver>
+          <!-- Pushy Boot Receiver --> 
+
+        <!-- Do not modify - internal BroadcastReceiver that restarts the listener service -->
+         
+        <receiver android:name="me.pushy.sdk.receivers.PushyBootReceiver"> 
+            <intent-filter> 
+                <action android:name="android.intent.action.BOOT_COMPLETED"/> 
+            </intent-filter>
+             
+        </receiver>
+          
+        <!-- Pushy Socket Service -->
+
+         <!-- Do not modify - internal socket background service -->
+         
+        <service android:name="me.pushy.sdk.services.PushySocketService"/>
+          <!-- End Pushy Declarations -->
+
         <activity
             android:name=".BlankActivityForDialog"
             android:screenOrientation="portrait"
