start_ride_alarm_via_service : changes2

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -315,7 +315,10 @@
         </receiver>
 
         <receiver android:name=".home.utils.LocationReceiverBG"/>
-
+        <service
+            android:name=".home.StartRideLocationUpdateService"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <service android:name="com.google.android.gms.analytics.CampaignTrackingService"/>
         <service
