feature_driver_tour_new: working upon server class

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -532,7 +532,7 @@
         </receiver>
 
         <service
-            android:name=".tutorial.UpdateDriverStatus"
+            android:name=".tutorial.ExtendStopTimeService"
             android:enabled="true"/>
 
         <!--<service-->
