feature_driver_tour_new: service upgraded and code refectored

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -532,7 +532,7 @@
         </receiver>
 
         <service
-            android:name=".tutorial.ExtendStopTimeService"
+            android:name=".tutorial.UpdateTutStatusService"
             android:enabled="true"/>
 
         <!--<service-->
