stripe_integration: fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -538,6 +538,7 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".stripe.wallet.StripeCardsActivity"
+            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
 
 
