wl_dev: country code hardcoded for hitch

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -248,11 +248,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".DriverEarningsNew"
+            android:name=".EarningsActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".DailyRideDetailsActivity"
+            android:name=".DailyEarningActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
         <activity
