f_distance_estimation: temp

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -398,7 +398,7 @@
             android:enabled="true"
             android:exported="true"/>
         <service
-            android:name=".services.AltMeteringService"
+            android:name=".altmetering.AltMeteringService"
             android:enabled="true"
             android:exported="true"/>
         <service
