f_tasks:-fetch driver tasks UI and api integrated

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -516,6 +516,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".DriverTasksActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
