custom view pager and gcm request added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -101,7 +101,8 @@
         <activity android:name=".RequestActivity"
             android:screenOrientation="portrait"
             android:theme="@style/TransparentTheme"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:label=""/>
 
         <service
             android:name=".MyInstanceIDListenerService"
