vehicle decoupling tab added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -83,7 +83,11 @@
         <activity
             android:name=".VehicleDetailsActivity"
             android:label="@string/title_activity_vehicle_details"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTask"
+            >
+
+        </activity>
 
         <provider
             android:name=".utils.PhotoProvider"
