build ready for staging and prod

--- a/JugnooNewDriver/gradle.properties
+++ b/JugnooNewDriver/gradle.properties
@@ -7,3 +7,13 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.caching=true
 kapt.incremental.apt=true
+
+
+
+
+
+### relase key information
+RELEASE_STORE_FILE=../keystore/Taxiye_Driver.jks
+RELEASE_STORE_PASSWORD=TaxiyeDriver
+RELEASE_KEY_ALIAS=TaxiyeDriver
+RELEASE_KEY_PASSWORD=TaxiyeDriver
