--- a/JugnooNewDriver/jugnooNewDriver/build.gradle
+++ b/JugnooNewDriver/jugnooNewDriver/build.gradle
@@ -24,12 +24,25 @@ repositories {
 }
 
 android {
+
     signingConfigs {
+        /*
         config {
             keyAlias 'jugnoo_driver'
             keyPassword 'jugnoo_driver'
             storeFile file('/Users/aneeshbansal/Desktop/jugnoo_backup/keystore_jugnoo_driver_password/jugnoo_driver_keystore.keystore')
             storePassword 'android'
+        }
+        */
+        release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+
+            // Optional, specify signing versions used
+            v1SigningEnabled true
+            v2SigningEnabled true
         }
     }
     compileOptions {
@@ -98,7 +111,7 @@ android {
             buildConfigField "boolean", "DEBUG_MODE", "false"
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     'proguard-rules.txt'
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
         applicationVariants.all { variant ->
             variant.outputs.each { output ->
@@ -119,7 +132,7 @@ android {
             buildConfigField "String", "STRIPE_CLIENT_ID_LIVE", "\"\""
             buildConfigField "boolean", "MAPS_APIS_SIGN", "false"
             buildConfigField "String", "STRIPE_KEY_LIVE", "\"\""
-            buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyDRlxbwMF-rjd0m2jitT5Czg_pjQP4kqRk\""
+            buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyCc7cCs0yv9EK7lNobBxtHUxM2Q5iq5G_0\""
             
             buildConfigField "String", "DEV_SERVER_URL", "\"https://$HOST:8008\""
             buildConfigField "String", "LIVE_URL", "\"https://$HOST:4012\""
@@ -151,16 +164,16 @@ android {
             buildConfigField "String", "STRIPE_CLIENT_ID_LIVE", "\"\""
             buildConfigField "boolean", "MAPS_APIS_SIGN", "false"
             buildConfigField "String", "STRIPE_KEY_LIVE", "\"\""
-            buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyDRlxbwMF-rjd0m2jitT5Czg_pjQP4kqRk\""
+            buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyCc7cCs0yv9EK7lNobBxtHUxM2Q5iq5G_0\""
 
-            buildConfigField "String", "DEV_SERVER_URL", "\"https://$HOST:8012\""
-            buildConfigField "String", "LIVE_URL", "\"https://$HOST:4012\""
-            buildConfigField "String", "TRIAL_SERVER_URL", "\"https://$HOST:8200\""
-            buildConfigField "String", "DEV_1_SERVER_URL", "\"https://$HOST:8013\""
-            buildConfigField "String", "DEV_2_SERVER_URL", "\"https://$HOST:8014\""
-            buildConfigField "String", "DEV_3_SERVER_URL", "\"https://$HOST:8015\""
-            buildConfigField "String", "CHAT_URL_DEV", "\"https://$HOST:8095\""
-            buildConfigField "String", "CHAT_URL_LIVE", "\"https://$HOST:4010\""
+            buildConfigField "String", "DEV_SERVER_URL", "\"https://$HOST:8008\""
+            buildConfigField "String", "LIVE_URL", "\"https://$HOST:8008\""
+            buildConfigField "String", "TRIAL_SERVER_URL", "\"https://$HOST:8008\""
+            buildConfigField "String", "DEV_1_SERVER_URL", "\"https://$HOST:8008\""
+            buildConfigField "String", "DEV_2_SERVER_URL", "\"https://$HOST:8008\""
+            buildConfigField "String", "DEV_3_SERVER_URL", "\"https://$HOST:8008\""
+            buildConfigField "String", "CHAT_URL_DEV", "\"https://$HOST:8003\""
+            buildConfigField "String", "CHAT_URL_LIVE", "\"https://$HOST:8003\""
 
             def addConstant = {constantName, constantValue ->
                 manifestPlaceholders += [ (constantName):constantValue]
