(fix) build mv path fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,12 @@ build_debug_release:
     - cd JugnooNewDriver
     - ./gradlew assembleTaxiyeStagingDebug assembleTaxiyeStagingRelease
     - mkdir build-files
-    - mv jugnooNewDriver/build/outputs/apk/taxiyeStaging/release/taxiyeStaging_driver_debug6010.apk build-files/taxiye-driver-staging-release.apk
-    - mv jugnooNewDriver/build/outputs/apk/taxiyeStaging/debug/taxiyeStaging_driver_release6010.apk build-files/taxiye-driver-staging-debug.apk
+    - mv jugnooNewDriver/build/outputs/apk/taxiyeStaging/release/taxiyeStaging_driver_release6010.apk build-files/taxiye-driver-staging-release.apk
+    - mv jugnooNewDriver/build/outputs/apk/taxiyeStaging/debug/taxiyeStaging_driver_debug6010.apk build-files/taxiye-driver-staging-debug.apk
 
   artifacts:
     paths:
-      - build-files
+      - JugnooNewDriver/build-files
 
   only:
     - develop
